--- a/modules/developer_manual/pages/core/apis/ocs-recipient-api.adoc
+++ b/modules/developer_manual/pages/core/apis/ocs-recipient-api.adoc
@@ -58,12 +58,12 @@ If the users admin, user1, user2 and the groups group1 and group2 were registerd
 
 [source,json]
 ----
-include::{examplesdir}core/scripts/responses/recipients/response-success.json[]
+include::example$core/scripts/responses/recipients/response-success.json[]
 ----
 
 The same request with xml body.
 
 [source,xml]
 ----
-include::{examplesdir}core/scripts/responses/recipients/response-success.xml[]
+include::example$core/scripts/responses/recipients/response-success.xml[]
 ----
