--- a/modules/developer_manual/pages/core/theming.adoc
+++ b/modules/developer_manual/pages/core/theming.adoc
@@ -108,14 +108,14 @@ IMPORTANT: Don't forget to create `read-config.php` from the included code below
 
 [source,bash]
 ----
-include::{examplesdir}scripts/theme-bootstrap.sh[]
+include::example$scripts/theme-bootstrap.sh[]
 ----
 
 *read-config.php*
 
 [source,php]
 ----
-include::{examplesdir}scripts/read-config.php[]
+include::example$scripts/read-config.php[]
 ----
 
 == How to Create a New Theme
