--- a/modules/developer_manual/pages/webdav_api/search/_search_files.adoc
+++ b/modules/developer_manual/pages/webdav_api/search/_search_files.adoc
@@ -44,7 +44,7 @@ In the `search` element, specify the search pattern to filter the list of files 
 
 [source,xml]
 ----
-include::{examplesdir}core/webdav_api/search/request/search_files/minimal_request_body.xml[indent=0]
+include::example$core/webdav_api/search/request/search_files/minimal_request_body.xml[indent=0]
 ----
 
 ==== Filtering Records
@@ -54,7 +54,7 @@ In the example below, you can see how to filter out any file that has not been f
 
 [source,xml]
 ----
-include::{examplesdir}core/webdav_api/search/request/search_files/minimal_request_body.xml[indent=0]
+include::example$core/webdav_api/search/request/search_files/minimal_request_body.xml[indent=0]
 ----
 
 
@@ -65,7 +65,7 @@ In the example below, at most one hundred records, starting from record 200, wil
 
 [source,xml]
 ----
-include::{examplesdir}core/webdav_api/search/request/search_files/limit_number_of_results.xml[indent=0]
+include::example$core/webdav_api/search/request/search_files/limit_number_of_results.xml[indent=0]
 ----
 
 ==== Reducing The File Properties Returned
@@ -76,7 +76,7 @@ include::{partialsdir}/webdav_api/search/file_properties.adoc[]
 
 [source,xml]
 ----
-include::{examplesdir}core/webdav_api/search/request/search_files/search_body_with_properties.xml[indent=0]
+include::example$core/webdav_api/search/request/search_files/search_body_with_properties.xml[indent=0]
 ----
 
 NOTE: The example uses http://xmlsoft.org/xmllint.html[xmllint] to make the response more readable.
@@ -102,7 +102,7 @@ And each `response` element contains three items:
 .Search Response
 [source,xml]
 ----
-include::{examplesdir}core/webdav_api/search/response/search_files/success/search_response.xml[indent=0]
+include::example$core/webdav_api/search/response/search_files/success/search_response.xml[indent=0]
 ----
 
 === Failure
@@ -113,7 +113,7 @@ If the payload file cannot be read or is invalid XML, then the following XML res
 
 [source,xml]
 ----
-include::{examplesdir}core/webdav_api/search/response/common/failure/incorrect_payload_or_parse_failure.xml[indent=0]
+include::example$core/webdav_api/search/response/common/failure/incorrect_payload_or_parse_failure.xml[indent=0]
 ----
 
 ==== If a Non-Existent Property Is Requested 
@@ -122,6 +122,6 @@ If a non-existent property is requested, then an additional `propstat` element i
 
 [source,xml]
 ----
-include::{examplesdir}core/webdav_api/search/response/common/failure/request_non_existent_property.xml[indent=0,lines=19..25]
+include::example$core/webdav_api/search/response/common/failure/request_non_existent_property.xml[indent=0,lines=19..25]
 ----
 
